--- a/home.html
+++ b/home.html
@@ -24,8 +24,9 @@
     <!-- external css file  -->
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="bg-gray-100 h-[100vh] flex justify-center">
-    <main class="w-[450px] mx-auto">
+  <body class="flex h-[100vh] bg-gray-100 justify-center">
+    <main class="w-[375px] sm:w-[450px] mx-auto">
+      <!-- header section start  -->
       <header class="p-4 border-b-2 border-gray-200 bg-white shadow-2xl">
         <nav class="flex justify-between items-center">
           <div class="flex gap-2">
@@ -43,8 +44,10 @@
           </div>
         </nav>
       </header>
+      <!-- header section close  -->
+      <!-- banner section start  -->
       <section class="py-5 bg-white">
-        <div class="w-[402px] mx-auto space-y-3">
+        <div class="w-[400px] mx-auto space-y-3">
           <h1 class="text-2xl font-bold">
             <i class="fa-solid fa-fire text-orange-400"></i> Welcome to Payoo!
           </h1>
@@ -54,8 +57,10 @@
           </p>
         </div>
       </section>
+      <!-- banner section close  -->
+      <!-- menu section start  -->
       <section class="py-5 bg-white rounded-b-xl">
-        <div class="menu-cont w-[402px] mx-auto grid grid-cols-3 gap-3">
+        <div class="menu-cont w-[400px] mx-auto grid grid-cols-3 gap-3">
           <!-- add money  -->
           <div
             class="flex flex-col justify-center items-center border-1 border-gray-300 rounded-2xl shadow-xl p-3 text-sm text-gray-400"
@@ -105,6 +110,114 @@
           <!-- transaction  -->
         </div>
       </section>
+      <!-- menu section close  -->
+      <!-- menu information section start  -->
+      <section class="pt-7">
+        <div class="w-[400px] mx-auto">
+          <h1 class="font-bold py-3">Add Money</h1>
+          <form action="" class="p-5 bg-white rounded-xl">
+            <div class="flex flex-col gap-2">
+              <label for="select-bank">Slect A bank</label>
+              <input
+                type="text"
+                class="px-4 py-2 rounded-3xl focus:outline-blue-600 bg-gray-100 border-none w-full"
+                placeholder="Select Bank"
+                list="bank-name"
+                id="select-bank"
+              />
+              <datalist id="bank-name">
+                <option value="AB Bank PLC"></option>
+                <option value="Agrani Bank Limited"></option>
+                <option value="Al-Arafah Islami Bank Limited"></option>
+                <option value="Ansar VDP Unnayan Bank"></option>
+                <option value="Bangladesh Development Bank Limited"></option>
+                <option value="Bangladesh Krishi Bank"></option>
+                <option value="Bangladesh Shilpa Bank"></option>
+                <option value="Bangladesh Shilpa Rin Sangstha"></option>
+                <option value="Bank Asia PLC"></option>
+                <option value="BASIC Bank Limited"></option>
+                <option value="Bengal Commercial Bank Limited"></option>
+                <option value="BRAC Bank PLC"></option>
+                <option value="Citizens Bank PLC"></option>
+                <option value="Citibank N.A."></option>
+                <option value="City Bank PLC"></option>
+                <option value="Commercial Bank of Ceylon Limited"></option>
+                <option value="Community Bank Bangladesh PLC"></option>
+                <option value="Dhaka Bank PLC"></option>
+                <option value="Dutch-Bangla Bank PLC"></option>
+                <option value="Eastern Bank PLC"></option>
+                <option value="EXIM Bank Limited"></option>
+                <option value="First Security Islami Bank Limited"></option>
+                <option value="Global Islami Bank Ltd."></option>
+                <option value="Habib Bank Ltd"></option>
+                <option value="ICB Islamic Bank Ltd."></option>
+                <option value="IFIC Bank Limited"></option>
+                <option value="Islami Bank Bangladesh Ltd."></option>
+                <option value="Jamuna Bank Limited"></option>
+                <option value="Janata Bank Limited"></option>
+                <option value="Karmashangosthan Bank"></option>
+                <option value="Meghna Bank PLC"></option>
+                <option value="Mercantile Bank Limited"></option>
+                <option value="Midland Bank Limited"></option>
+                <option value="Modhumoti Bank Limited"></option>
+                <option value="Mutual Trust Bank PLC"></option>
+                <option value="National Bank Limited"></option>
+                <option value="National Credit & Commerce Bank PLC"></option>
+                <option value="NRB Bank Limited"></option>
+                <option value="NRB Commercial Bank Limited"></option>
+                <option value="One Bank PLC"></option>
+                <option value="Padma Bank Limited"></option>
+                <option value="Premier Bank PLC"></option>
+                <option value="Prime Bank PLC"></option>
+                <option value="Probashi Kallyan Bank"></option>
+                <option value="Pubali Bank Limited"></option>
+                <option value="Rajshahi Krishi Unnayan Bank"></option>
+                <option value="Rupali Bank Limited"></option>
+                <option value="SABC Bank PLC"></option>
+                <option value="Shahjalal Islami Bank Limited"></option>
+                <option value="Shimanto Bank PLC"></option>
+                <option value="Social Islami Bank Ltd."></option>
+                <option value="Sonali Bank Limited"></option>
+                <option
+                  value="South Bangla Agriculture and Commerce Bank Limited"
+                ></option>
+                <option value="Southeast Bank Limited"></option>
+                <option value="Standard Bank Limited"></option>
+                <option value="Standard Chartered Bank"></option>
+                <option
+                  value="The Hong Kong and Shanghai Banking Corporation Ltd. (HSBC)"
+                ></option>
+                <option value="Trust Bank PLC"></option>
+                <option value="Union Bank PLC"></option>
+                <option value="United Commercial Bank PLC"></option>
+                <option value="Uttara Bank PLC"></option>
+              </datalist>
+              <label for="bank-acct">Bank Account Number</label>
+              <input
+                type="text"
+                class="px-4 py-2 rounded-3xl focus:outline-blue-600 bg-gray-100 border-none w-full"
+                placeholder="Enter 11 digit account number"
+                id="bank-acct"
+              />
+              <label for="add-amount">Amount to Add</label>
+              <input
+                type="text"
+                class="px-4 py-2 rounded-3xl focus:outline-blue-600 bg-gray-100 border-none w-full"
+                placeholder="Add Amount to withdraw"
+                id="add-amount"
+              />
+              <label for="pin-num">Pin Number</label>
+              <input
+                type="text"
+                class="px-4 py-2 rounded-3xl focus:outline-blue-600 bg-gray-100 border-none w-full"
+                placeholder="Enter 4 digit pin number"
+                id="pin-num"
+              />
+            </div>
+          </form>
+        </div>
+      </section>
+      <!-- menu information section close  -->
     </main>
 
     <script src="script.js"></script>
