--- a/home.html
+++ b/home.html
@@ -381,12 +381,10 @@
         <!-- transaction History section start -->
         <div id="transaction-info" class="w-[400px] mx-auto hidden">
           <div class="flex justify-between items-center">
-            <h1 class="font-bold py-3">Pay Bill</h1>
-            <span class="text-gray-400">View All</span>
+            <h1 class="font-bold py-3">Transaction History</h1>
+            <span id="trans-btn" class="text-gray-400">View All</span>
           </div>
-          <div action="" class="p-5 bg-white rounded-xl">
-            <div class="flex flex-col gap-2"></div>
-          </div>
+          <div id="historyCont"></div>
         </div>
         <!-- transaction History section close -->
       </section>
